welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: ';' expected but ')' found.
		setCouleurBrosse((T(T.length-1)%T.length)))
                                                          ^